--- a/inst/scripts/setup.Rnw
+++ b/inst/scripts/setup.Rnw
@@ -1,6 +1,7 @@
 Required packages:
 
 <<packages,results=hide>>=
+options(prompt="R> ", continue=" ", width=70)##device=pdf
 library(oligoClasses)
 library(Beaty)
 library(SNPchip)
